--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,9 @@ marshmallow-sqlalchemy==1.1.0
 mysql==0.0.3
 mysqlclient==2.2.4
 packaging==24.1
-pip==24.2
 pycparser==2.22
 PyMySQL==1.1.1
+python-dotenv==1.0.1
 requests==2.32.3
 requests-toolbelt==1.0.0
 SQLAlchemy==2.0.35
